디데이 계산 익스텐션 수정, 마이페이지 뷰 수정

--- a/rescat/rescat/MyPage/Storyboard/MyPage.storyboard
+++ b/rescat/rescat/MyPage/Storyboard/MyPage.storyboard
@@ -893,7 +893,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Q2J-el-Ame">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" red="0.98824185132980347" green="0.98822349309921265" blue="0.98823589086532593" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MyWriteAdoptTableViewCell" rowHeight="127" id="EIi-HW-Rll" customClass="MyWriteAdoptTableViewCell" customModule="rescat" customModuleProvider="target">
@@ -1011,7 +1011,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="rvW-CM-zva" firstAttribute="trailing" secondItem="Q2J-el-Ame" secondAttribute="trailing" id="3bw-Uw-zKj"/>
-                            <constraint firstItem="rvW-CM-zva" firstAttribute="bottom" secondItem="Q2J-el-Ame" secondAttribute="bottom" id="Z57-op-XQ7"/>
+                            <constraint firstItem="rvW-CM-zva" firstAttribute="bottom" secondItem="Q2J-el-Ame" secondAttribute="bottom" constant="49" id="Z57-op-XQ7"/>
                             <constraint firstItem="Q2J-el-Ame" firstAttribute="leading" secondItem="rvW-CM-zva" secondAttribute="leading" id="oBg-5s-mfQ"/>
                             <constraint firstItem="Q2J-el-Ame" firstAttribute="top" secondItem="BVU-CY-ciy" secondAttribute="top" id="uGk-WH-lhL"/>
                         </constraints>
