--- a/rescat/rescat/Main/Storyboard/FundingDetailContentTableCell.xib
+++ b/rescat/rescat/Main/Storyboard/FundingDetailContentTableCell.xib
@@ -74,16 +74,16 @@
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="ltH-7T-beV">
                         <rect key="frame" x="27" y="389.5" width="321" height="99.5"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icEtc" translatesAutoresizingMaskIntoConstraints="NO" id="gzz-Jp-u8f">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gzz-Jp-u8f">
                                 <rect key="frame" x="0.0" y="0.0" width="99.5" height="99.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="gzz-Jp-u8f" secondAttribute="height" multiplier="1:1" id="6y7-y8-HYT"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icEtc" translatesAutoresizingMaskIntoConstraints="NO" id="Fx1-rR-rva">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fx1-rR-rva">
                                 <rect key="frame" x="110.5" y="0.0" width="100" height="99.5"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icEtc" translatesAutoresizingMaskIntoConstraints="NO" id="fJf-VP-9DJ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fJf-VP-9DJ">
                                 <rect key="frame" x="221.5" y="0.0" width="99.5" height="99.5"/>
                             </imageView>
                         </subviews>
@@ -154,7 +154,4 @@
             <point key="canvasLocation" x="53.600000000000001" y="83.208395802098963"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="icEtc" width="21" height="21"/>
-    </resources>
 </document>
