--- a/rescat/rescat/Main/Storyboard/FundingTableCell.xib
+++ b/rescat/rescat/Main/Storyboard/FundingTableCell.xib
@@ -31,19 +31,19 @@
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kfi-e2-FhS">
-                            <rect key="frame" x="34" y="56" width="42" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <rect key="frame" x="34" y="56" width="42.5" height="19.5"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pzv-0W-2F3">
-                            <rect key="frame" x="34" y="79" width="42" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <rect key="frame" x="34" y="79" width="307" height="17"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RZO-8N-xhs">
-                            <rect key="frame" x="39" y="115" width="297" height="4"/>
+                            <rect key="frame" x="39" y="111" width="297" height="4"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="4" id="AhN-e7-0bO"/>
@@ -51,7 +51,7 @@
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5IA-os-ox0">
                             <rect key="frame" x="40" y="122.5" width="31" height="14.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                             <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
@@ -64,7 +64,7 @@
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hS3-PP-4D8">
                             <rect key="frame" x="304" y="122.5" width="31" height="15"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                             <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
@@ -92,6 +92,7 @@
                         <constraint firstItem="RZO-8N-xhs" firstAttribute="top" secondItem="Pzv-0W-2F3" secondAttribute="bottom" constant="15" id="pS6-fX-5q0"/>
                         <constraint firstItem="Pzv-0W-2F3" firstAttribute="leading" secondItem="kfi-e2-FhS" secondAttribute="leading" id="s4U-7y-BT9"/>
                         <constraint firstItem="Pzv-0W-2F3" firstAttribute="top" secondItem="OeD-6x-6WY" secondAttribute="top" constant="79" id="wuz-LJ-9rH"/>
+                        <constraint firstAttribute="trailing" secondItem="Pzv-0W-2F3" secondAttribute="trailing" constant="34" id="xsV-TY-Myk"/>
                         <constraint firstAttribute="bottom" secondItem="EDI-Yr-tqc" secondAttribute="bottom" constant="7.5" id="yv5-lB-2VR"/>
                     </constraints>
                 </view>
