--- a/rescat/rescat/Sign/Splash/Splash.storyboard
+++ b/rescat/rescat/Sign/Splash/Splash.storyboard
@@ -18,14 +18,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cj9-iw-dhG">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cj9-iw-dhG">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="f2A-sK-AoA" firstAttribute="trailing" secondItem="cj9-iw-dhG" secondAttribute="trailing" id="fdy-Zy-r9Y"/>
-                            <constraint firstItem="f2A-sK-AoA" firstAttribute="bottom" secondItem="cj9-iw-dhG" secondAttribute="bottom" id="k2C-5t-X6Y"/>
+                            <constraint firstAttribute="bottom" secondItem="cj9-iw-dhG" secondAttribute="bottom" id="k2C-5t-X6Y"/>
                             <constraint firstItem="cj9-iw-dhG" firstAttribute="top" secondItem="DXO-nU-JU9" secondAttribute="top" id="oRr-Gv-yku"/>
                             <constraint firstItem="cj9-iw-dhG" firstAttribute="leading" secondItem="f2A-sK-AoA" secondAttribute="leading" id="sya-UY-K3G"/>
                         </constraints>
@@ -37,7 +37,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uKH-gw-l5d" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="97" y="118"/>
+            <point key="canvasLocation" x="96.799999999999997" y="117.39130434782609"/>
         </scene>
         <!--Sign-->
         <scene sceneID="qBl-zD-5eh">
